--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a href="#">En savoir plus</a>
     </div>
     <div class="info-card">
-      <h3>Emploi du temps</h3>
+      <h3>Emploi dUu temps</h3>
       <p>Consultez les disponibilités des médecins et réservez vos créneaux facilement.</p>
       <a href="#">Voir les horaires</a>
     </div>
