update+medecins speciaux

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li class="dropdown">
           <a href="parcourir.html">Tout Parcourir</a>
           <ul class="dropdown-menu">
-            <li><a href="medecine_generale.html">Médecine générale</a></li>
+            <li><a href="medecine_general.html">Médecine générale</a></li>
             <li><a href="medecins_special.html">Médecins spécialisés</a></li>
             <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
           </ul>
@@ -29,7 +29,7 @@
         <li><a href="#">Rendez-vous</a></li>
         <li><a href="#">Votre Compte</a></li>
       </ul>
-    </nav>
+    </nav>    
   </header>
 
   <div class="search-box">
