--- a/medecine_general.html
+++ b/medecine_general.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -13,24 +12,24 @@
   <header>
     <div class="header-container">
       <img src="medicare_logo.png" alt="Logo Medicare" class="logo">
-      <h1>Medicare : Médecine Générale</h1>
+      <h1>Medicare : Médecine générale</h1>
     </div>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li class="dropdown">
-          <a href="#">Médecine générale</a>
+          <a href="parcourir.html">Tout Parcourir</a>
           <ul class="dropdown-menu">
-            <li><a href="#alice-dupont">Dr. Alice Dupont</a></li>
-            <li><a href="#marc-bernard">Dr. Marc Bernard</a></li>
-            <li><a href="#emma-robitaille">Dr. Emma Robitaille</a></li>
+            <li><a href="medecine_general.html">Médecine générale</a></li>
+            <li><a href="medecins_special.html">Médecins spécialisés</a></li>
+            <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
           </ul>
         </li>
         <li><a href="#">Recherche</a></li>
         <li><a href="#">Rendez-vous</a></li>
         <li><a href="#">Votre Compte</a></li>
       </ul>
-    </nav>
+    </nav>    
   </header>
 
   <main style="padding: 2rem; background-color: #f9f9f9;">
