--- a/medecins_special.html
+++ b/medecins_special.html
@@ -9,21 +9,28 @@
 
 <body>
 
-  <header>
-    <div class="header-container">
-      <img src="medicare_logo.png" alt="Logo Medicare" class="logo">
-      <h1>Medicare : Médecine Générale</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="medecins_special.html">Médecins spécialisés</a></li>
-        <li><a href="recherche.html">Recherche</a></li>
-        <li><a href="rdv.html">Rendez-vous</a></li>
-        <li><a href="compte.html">Votre Compte</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <div class="header-container">
+          <img src="medicare_logo.png" alt="Logo Medicare" class="logo">
+          <h1>Medicare : Médecins spécialisés</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li class="dropdown">
+              <a href="parcourir.html">Tout Parcourir</a>
+              <ul class="dropdown-menu">
+                <li><a href="medecine_general.html">Médecine générale</a></li>
+                <li><a href="medecins_special.html">Médecins spécialisés</a></li>
+                <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Recherche</a></li>
+            <li><a href="#">Rendez-vous</a></li>
+            <li><a href="#">Votre Compte</a></li>
+          </ul>
+        </nav>    
+      </header>
 
   <main style="padding: 2rem; background-color: #f9f9f9;">
     
