--- a/parcourir.html
+++ b/parcourir.html
@@ -18,30 +18,18 @@
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li class="dropdown">
-          <a href="#">Médecine générale</a>
+          <a href="parcourir.html">Tout Parcourir</a>
           <ul class="dropdown-menu">
-            <li><a href="medecine_general.html#alice-dupont">Dr. Alice Dupont</a></li>
-            <li><a href="medecine_general.html#marc-bernard">Dr. Marc Bernard</a></li>
-            <li><a href="medecine_general.html#emma-robitaille">Dr. Emma Robitaille</a></li>
-          </ul>
-          <a href="#">Médecins spécialisés</a>
-          <ul class="dropdown-menu">
-            <li><a href="medecins_special.html#alice-dupont">Dr. Alice Dupont</a></li>
-            <li><a href="medecins_special.html#marc-bernard">Dr. Marc Bernard</a></li>
-            <li><a href="medecins_special.html#emma-robitaille">Dr. Emma Robitaille</a></li>
-          </ul>
-          <a href="#">Laboratoire</a>
-          <ul class="dropdown-menu">
-            <li><a href="labo.html#alice-dupont">Dr. Alice Dupont</a></li>
-            <li><a href="labo.html#marc-bernard">Dr. Marc Bernard</a></li>
-            <li><a href="labo.html#emma-robitaille">Dr. Emma Robitaille</a></li>
+            <li><a href="medecine_general.html">Médecine générale</a></li>
+            <li><a href="medecins_special.html">Médecins spécialisés</a></li>
+            <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
           </ul>
         </li>
         <li><a href="#">Recherche</a></li>
         <li><a href="#">Rendez-vous</a></li>
         <li><a href="#">Votre Compte</a></li>
       </ul>
-    </nav>
+    </nav>    
   </header>
 
   <main style="padding: 2rem; background-color: #f9f9f9;">
@@ -55,7 +43,7 @@
       <div class="info-card">
         <h3>2. Médecins spécialistes</h3>
         <p>Découvrez nos spécialistes dans plusieurs domaines : cardiologie, dermatologie, pédiatrie, etc.</p>
-        <a href="#">Explorer Médecins spécialistes</a>
+        <a href="medecins_special.html">Explorer Médecins spécialistes</a>
       </div>
 
       <div class="info-card">
