--- a/medecins_special.html
+++ b/medecins_special.html
@@ -25,9 +25,9 @@
                 <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
               </ul>
             </li>
-            <li><a href="#">Recherche</a></li>
-            <li><a href="#">Rendez-vous</a></li>
-            <li><a href="#">Votre Compte</a></li>
+            <li><a href="recherche.html">Recherche</a></li>
+            <li><a href="rdv.html">Rendez-vous</a></li>
+            <li><a href="compte.html">Votre Compte</a></li>
           </ul>
         </nav>    
       </header>
