--- a/recherche.html
+++ b/recherche.html
@@ -31,28 +31,16 @@
       </ul>
     </nav>    
   </header>
-
-  <main style="padding: 2rem; background-color: #f9f9f9;">
-    <section class="info-section">
-      <div class="info-card">
-        <h3>1. Médecine générale</h3>
-        <p>Consultez la liste complète de nos médecins généralistes, leur disponibilité, leur CV, et prenez rendez-vous directement.</p>
-        <a href="medecine_general.html">Explorer Médecine générale</a>
-      </div>
-
-      <div class="info-card">
-        <h3>2. Médecins spécialistes</h3>
-        <p>Découvrez nos spécialistes dans plusieurs domaines : cardiologie, dermatologie, pédiatrie, etc.</p>
-        <a href="medecins_special.html">Explorer Médecins spécialistes</a>
-      </div>
-
-      <div class="info-card">
-        <h3>3. Laboratoire de biologie médicale</h3>
-        <p>Accès aux services de prélèvement, analyses biologiques, bilans complets avec suivi de vos résultats.</p>
-        <a href="#">Explorer Laboratoire</a>
-      </div>
-    </section>
-  </main>
+  <div class="search-box">
+    <form method="POST" action="recherche.php">
+      <input type="text" name="recherche" placeholder="Recherche..." required>
+      <span class="search-icon">🔍</span>
+      <br>
+      <button type="submit">Entrer</button>
+    </form>
+    <!-- (PHP) Ici on traitera la recherche en base de données -->
+    <!-- Exemple : <?php // if(isset($_POST['recherche'])) { ... } ?> -->
+  </div>
 
   <footer>
     <p>Contactez-nous : contact@medicare.omnes</p>
@@ -61,6 +49,5 @@
       Adresse : 10 rue des Médecins, Paris
     </div>
   </footer>
-
-</body>
+  </body>
 </html>
