--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="dropdown-menu">
             <li><a href="medecine_general.html">Médecine générale</a></li>
             <li><a href="medecins_special.html">Médecins spécialisés</a></li>
-            <li><a href="laboratoire.html">Laboratoire de biologie médicale</a></li>
+            <li><a href="labo.php">Laboratoire de biologie médicale</a></li>
           </ul>
         </li>
         <li><a href="recherche.html">Recherche</a></li>
