--- a/medecins_special.html
+++ b/medecins_special.html
@@ -27,7 +27,7 @@
             </li>
             <li><a href="#">Recherche</a></li>
             <li><a href="#">Rendez-vous</a></li>
-            <li><a href="#">Votre Compte</a></li>
+            <li><a href="login.html">Votre Compte</a></li>
           </ul>
         </nav>    
       </header>
